<resources>
    <string name="app_name">MotherTongue</string>
    <string name="welcome_to_mother_tongue">Welcome to</string>
    <string name="what_language_do_you_want_to_explore_today">What language do you want to explore today?</string>
    <string name="play">Play</string>
    <string name="let_s_see_what_s_in_there">Let\'s see what\'s in there</string>
    <string name="we_detected_your_are_in">We detected your are in:</string>

    <!-- Strings for camera settings. -->
    <string name="pref_category_key_camera" translatable="false">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>

    <!-- Strings for automl model choices preference. -->
    <string name="pref_title_automl_model_choices">AutoML Model Choices</string>
    <string name="pref_entries_automl_models_remote">Remote</string>
    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_live_preview_automl_remote_model_choices" translatable="false">lparmc</string>

    <!-- Strings for automl remote model name preference. -->
    <string name="pref_title_automl_remote_model_name">AutoML Remote Model Name</string>
    <string name="pref_key_live_preview_automl_remote_model_name" translatable="false">lparmn</string>
    <string name="pref_dialog_message_automl_remote_model_name">Remote model name in the Firebase Console.</string>

    <!-- Strings for object detector enable multiple objects preference. -->
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>

    <!-- Strings for object detector enable classification preference. -->
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>

    <!-- Firebase languages supported  -->
    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>French</item>
        <item>German</item>
        <item>Japanese</item>
        <item>Chinese</item>
        <item>Arabic</item>
    </string-array>

    <!-- Google Awareness API_KEY -->
    <string name="GOOGLE_PLACE_API_KEY">AIzaSyCGgZfRrrWaGGgn0le27yko9E_Smh_0VGk</string>
    <string name="looking_for">Let\'s look for ---> </string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCGgZfRrrWaGGgn0le27yko9E_Smh_0VGk</string>

    <string name="location_waiting_message" translatable="false">Analyzing location, please wait...</string>
    <string name="_0">0</string>
    <string name="score">Score:</string>
    <string name="game_status">GAME STATUS</string>
    <string-array name="places_array">
        <item>Select...</item>
        <item>HOUSE</item>
        <item>BUILDING</item>
        <item>STREET</item>
    </string-array>
    <string name="title_activity_navigation">navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
