<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ipleiria.mothertongue.ui.home.HomeFragment">
    <data>
        <variable
            name="mainModel"
            type="com.ipleiria.mothertongue.models.MainModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/template2">

        <TextView
            android:id="@+id/appTitletextView"
            android:layout_width="190dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_redondos"
            android:fontFamily="@font/annie_use_your_telescope"
            android:text="@string/welcome_to_mother_tongue"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textFontWeight="@android:integer/status_bar_notification_info_maxnum"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/langLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/back_redondos"
            android:text="@string/what_language_do_you_want_to_explore_today"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreLabel" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="169dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langLabelTextView" />

        <Button
            android:id="@+id/playButton"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="89dp"
            android:layout_height="41dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bordes_redondos"
            android:onClick="onClickPlayButton"
            android:text="@string/play"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gameStatusButton"
            app:layout_constraintTop_toTopOf="@+id/gameStatusButton" />

        <Button
            android:id="@+id/gameStatusButton"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="143dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/game_status"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detectedtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/back_redondos"
            android:text="@string/we_detected_your_are_in"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageSpinner" />

        <TextView
            android:id="@+id/detectedPlaceNametextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/back_redondos"
            android:text="@{mainModel.currentPlaceName}"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detectedtextView"
            app:layout_constraintTop_toTopOf="@+id/detectedtextView" />

        <TextView

            android:id="@+id/letsSeeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/back_redondos"
            android:text="@string/let_s_see_what_s_in_there"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detectedtextView" />


        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/_0"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/scoreLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scoreLabel"
            app:layout_constraintTop_toTopOf="@+id/scoreLabel"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/score"
            app:layout_constraintEnd_toStartOf="@+id/scoreTextView"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="199dp"
            android:layout_height="77dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitletextView"
            app:srcCompat="@drawable/logo" />


        <ProgressBar
            android:id="@+id/pBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:indeterminate="true"
            android:minWidth="200dp"
            android:minHeight="50dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameStatusButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>